# Tangly

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .gitignore  Procfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  tangle.py  users.py
backend/app/model/: __init__.py  status_transactions.py  users.py
backend/app/redis_client/: connection.py  redis_util.py
backend/app/repository/: auth_repository.py  base_repository.py  status_transactions_repository.py  tangle_repository.py  users.py
backend/app/service/: auth_service.py  tangle_service.py  users_service.py
backend/app/tangle/: cryptographics.py  props.py  tangle.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 17e7c7f66dae_initial_migration.py  49d3bb714e82_.py  55ab6e1e9f99_table_users_migration.py  d7c46d4ac87c_table_users_migration.py  e71d77add7bc_table_status_transactions.py  f8995988a4f3_.py
public/: manifest.json
src/: app.jsx  main.jsx  store.jsx
src/actions/: auth.jsx
src/components/color-utils/: color-preview.jsx
src/components/drop-upload-file/: FileUpload.jsx
src/components/iconify/: iconify.jsx
src/pages/: app.jsx  blog.jsx  decry-file.jsx  home.jsx  login.jsx  products.jsx  register.jsx  seeAllTransactions.jsx  seeTangle.jsx  update-profile.jsx  user.jsx
src/reducers/: auth.jsx  index.jsx  message.jsx
src/routes/: sections.jsx
src/services/: auth.service.jsx
src/utils/: format-time.js  local-storage.js
(+43 files in other folders)
